os-upb: add remarks from Vlad Dogaru

--- a/os-upb/os-upb.tex
+++ b/os-upb/os-upb.tex
@@ -88,7 +88,7 @@
 	\begin{itemize}
 		\item wikis (DokuWiki, MediaWiki, PmWiki)
 		\item Wordpress
-		\item Planeta CS -- \url{http://planet.cs.pub.ro}
+		\item Planeta CS -- \url{http://planet.cs.pub.ro/}
 	\end{itemize}
 \end{frame}
 
@@ -115,10 +115,9 @@
 		\item \url{http://moodle.org/} -- open-source community-based tools
 		for learning
 		\item implementat la nivelul UPB
-		\item Catedra de Calculatoare -- \url{http://curs.cs.pub.ro}
+		\item Catedra de Calculatoare -- \url{http://curs.cs.pub.ro/}
 		\item portal + utilitare de susținere a cursurilor (upload, forumuri,
 		assignments, feedback, calendar, online quizes)
-		\item majoritatea disciplinelor folosesc suportul Moodle
 	\end{itemize}
 \end{frame}
 
@@ -140,7 +139,7 @@
 				\item full-fledged Linux lab (Ubuntu)
 				\item shell, sisteme de fișiere, comenzi de bază, scripting,
 				editoare (Vim) etc.
-				\item \url{http://elf.cs.pub.ro/uso}
+				\item \url{http://elf.cs.pub.ro/uso/}
 				\item ``Introducere în sisteme de operare''
 				\url{http://books.google.com/books?id=_JFGzyRxQGcC}
 			\end{itemize}
@@ -215,11 +214,11 @@
 				\item Linux (Debian)
 				\item SSH, iptables, iproute, Apache, BIND, Postfix, Courier
 				IMAP, tcpdump
-				\item \url{http://elf.cs.pub.ro/rl}
+				\item \url{http://elf.cs.pub.ro/rl/}
 				\item Rețele locale --
 				\url{http://books.google.com/books?id=GdF_3ttxnRIC}
 			\end{itemize}
-		\item \textbf{Algoritmi de prelucrare distribuită}
+		\item \textbf{Algoritmi paraleli și distribuiți}
 			\begin{itemize}
 				\item middleware tools, MPI, OpenMP, multithreaded programming
 				\item MPICH, GCC, Java
@@ -293,13 +292,13 @@
 		\item \textbf{Compilatoare}
 			\begin{itemize}
 				\item back-end, front-end, alocarea registrelor
-				\item ANTLR, Java
+				\item SPIM (emulator de MIPS), ANTLR, Java
 				\item \url{http://cs.pub.ro/~cpl/}
 			\end{itemize}
 		\item \textbf{Sisteme de operare 2}
 			\begin{itemize}
 				\item kernel programming / driver development (Linux, Windows)
-				\item \url{http://elf.cs.pub.ro/so2}
+				\item \url{http://elf.cs.pub.ro/so2/}
 			\end{itemize}
 	\end{itemize}
 \end{frame}
@@ -324,7 +323,7 @@
 		\item \textit{Programare web}
 			\begin{itemize}
 				\item PHP, JSP, JS, AJAX, Tomcat
-				\item \url{http://elf.cs.pub.ro/pw}
+				\item \url{http://elf.cs.pub.ro/pw/}
 			\end{itemize}
 		\item \textit{Instrumente de dezvoltare a programelor}
 			\begin{itemize}
@@ -393,11 +392,11 @@
 		\item Git, Subversion
 		\item Redmine, Trac
 			\begin{itemize}
-				\item \url{http://koala.cs.pub.ro/redmine}
-				\item \url{http://ixlabs.cs.pub.ro/redmine}
-				\item \url{http://systems.cs.pub.ro/projects}
-				\item \url{http://ceata.org}
-				\item \url{http://rosedu.org/projects}
+				\item \url{http://koala.cs.pub.ro/redmine/}
+				\item \url{http://ixlabs.cs.pub.ro/redmine/}
+				\item \url{http://systems.cs.pub.ro/projects/}
+				\item \url{http://ceata.org/}
+				\item \url{http://rosedu.org/projects/}
 			\end{itemize}
 		\item DokuWiki, MediaWiki
 		\item \LaTeX
@@ -473,8 +472,8 @@
 
 \begin{frame}{Organizații}
 	\begin{itemize}
-		\item Ceata -- \url{http://ceata.org}
-		\item ROSEdu -- \url{http://rosedu.org}
+		\item Ceata -- \url{http://ceata.org/}
+		\item ROSEdu -- \url{http://rosedu.org/}
 	\end{itemize}
 \end{frame}
 
