add skeleton slides for gitosis-gitolite

--- a/gitosis-gitolite/gitosis-gitolite.tex
+++ b/gitosis-gitolite/gitosis-gitolite.tex
@@ -36,31 +36,120 @@
 
 \frame{\titlepage}
 
+\frame{\tableofcontents}
+
 % NB: Secțiunile nu sunt marcate vizual, ci doar apar în cuprins
-\section{Context}
+\section{Git}
 
 % Titlul unui frame se specifică fie în acolade, imediat după \begin{frame},
 % fie folosind \frametitle
-\begin{frame}{Context}
+\begin{frame}{Git}
 	\begin{itemize}		% Just like normal LaTeX
-		\item asistent universitar
-		\item Catedra de Calculatoare
-			\begin{itemize}
-				\item Facultatea de Automatică și Calculatoare
-					\begin{itemize}
-						\item Universitatea Politehnica din București
-					\end{itemize}
-			\end{itemize}
+		\item aaa
+		\item aaa
 	\end{itemize}
 \end{frame}
 
-\frame{\tableofcontents}
+\begin{frame}{Folosire Git}
+	\begin{itemize}
+		\item aa
+		\item bbb
+	\end{itemize}
+\end{frame}
 
-\section{TODO}
+\begin{frame}{Internele Git}
+	\begin{itemize}
+		\item aa
+		\item bbb
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{Internele Git -- objects}
+	\begin{itemize}
+		\item aa
+		\item bbb
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{Internele Git -- refs}
+	\begin{itemize}
+		\item aa
+		\item bbb
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{Internele Git -- packs}
+	\begin{itemize}
+		\item aa
+		\item bbb
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{URL-uri Git}
+	\begin{itemize}
+		\item aa
+		\item bbb
+	\end{itemize}
+\end{frame}
+
+\section{Gitosis}
 
 \frame{\tableofcontents[currentsection]}
 
-\begin{frame}{TODO}
+\begin{frame}{Gitosis}
+	\begin{itemize}
+		\item aa
+		\item bbb
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{Instalare}
+	\begin{itemize}
+		\item aa
+		\item bbb
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{Utilizare}
+	\begin{itemize}
+		\item aa
+		\item bbb
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{Internele Gitosis}
+	\begin{itemize}
+		\item aa
+		\item bbb
+	\end{itemize}
+\end{frame}
+
+\section{Gitolite}
+
+\frame{\tableofcontents[currentsection]}
+
+\begin{frame}{Gitolite}
+	\begin{itemize}
+		\item aa
+		\item bbb
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{Instalare}
+	\begin{itemize}
+		\item aa
+		\item bbb
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{Utilizare}
+	\begin{itemize}
+		\item aa
+		\item bbb
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{Internele Gitolite}
 	\begin{itemize}
 		\item aa
 		\item bbb
@@ -68,6 +157,15 @@
 \end{frame}
 
 \section{Întrebări}
+
+\begin{frame}{Resurse utile}
+	\begin{itemize}
+		\item \url{http://git-scm.com/}
+		\item \url{http://progit.org/}
+		\item \url{http://github.com/res0nat0r/gitosis}
+		\item \url{http://github.com/sitaramc/gitolite}
+	\end{itemize}
+\end{frame}
 
 \frame{\tableofcontents[currentsection]}
 
