add skeleton sildes for Cluster SSH

--- a/cssh/cssh.tex
+++ b/cssh/cssh.tex
@@ -37,33 +37,49 @@
 \frame{\titlepage}
 
 % NB: Secțiunile nu sunt marcate vizual, ci doar apar în cuprins
-\section{Context}
-
-% Titlul unui frame se specifică fie în acolade, imediat după \begin{frame},
-% fie folosind \frametitle
-\begin{frame}{Context}
-	\begin{itemize}		% Just like normal LaTeX
-		\item asistent universitar
-		\item Catedra de Calculatoare
-			\begin{itemize}
-				\item Facultatea de Automatică și Calculatoare
-					\begin{itemize}
-						\item Universitatea Politehnica din București
-					\end{itemize}
-			\end{itemize}
-	\end{itemize}
-\end{frame}
-
-\frame{\tableofcontents}
-
-\section{TODO}
+\section{Cluster SSH}
 
 \frame{\tableofcontents[currentsection]}
 
-\begin{frame}{TODO}
+% Titlul unui frame se specifică fie în acolade, imediat după \begin{frame},
+% fie folosind \frametitle
+\begin{frame}{Cluster SSH}
+	\begin{itemize}		% Just like normal LaTeX
+		\item TODO
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{Configurare}
 	\begin{itemize}
-		\item aa
-		\item bbb
+		\item TODO
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{Utilizare}
+	\begin{itemize}
+		\item TODO
+	\end{itemize}
+\end{frame}
+
+\section{Parallel SSH}
+
+\frame{\tableofcontents[currentsection]}
+
+\begin{frame}{Parallel SSH}
+	\begin{itemize}
+		\item TODO
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{Configurare}
+	\begin{itemize}
+		\item TODO
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{Utilizare}
+	\begin{itemize}
+		\item TODO
 	\end{itemize}
 \end{frame}
 
