manage-git: add link to gitready

--- a/manage-git/manage-git.tex
+++ b/manage-git/manage-git.tex
@@ -332,6 +332,7 @@
 	\begin{itemize}
 		\item \url{http://git-scm.com/}
         \item \url{http://gitimmersion.com/index.html}
+        \item \url{http://www.gitready.com/}
 		\item \url{http://progit.org/}
 		\item \url{http://github.com/sitaramc/gitolite}
 		\item \url{https://git.wiki.kernel.org/index.php/Gitweb}
