org-mode: complete slides, add support for code folder

--- a/org-mode/org-mode.tex
+++ b/org-mode/org-mode.tex
@@ -10,6 +10,8 @@
 					% sau \href{http://...}{Nume Link}
 \usepackage{verbatim}
 
+\usepackage{code/highlight} % highlight
+
 \mode<presentation>
 { \usetheme{Berlin} }
 
@@ -32,13 +34,55 @@
 
 \begin{frame}{Org-Mode}
   \begin{itemize}
-    \item TODO
+    \item Emacs Mode
+    \item notițe
+    \item planificare
+    \item TODO-uri
+    \item menținut plain-text
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Org-Mode Keywords}
+  \begin{itemize}
+    \item ierarhie
+    \item tag-uri
+    \item timestamp
+    \item stare
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Demo}
+  \begin{itemize}
+    \item Here we go!
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Instalare și configurare}
+  \begin{itemize}
+    \item \texttt{apt-get install org-mode}
+    \item în \texttt{$\sim$/.emacs}
+      \begin{beamerboxesrounded}[lower=block body,shadow=true]{}
+        \scriptsize \input{code/dot-emacs-org-mode}
+      \end{beamerboxesrounded}
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Extra}
+  \begin{itemize}
+    \item Thanks to Dusan Gabrijelcic!
+      \begin{itemize}
+        \item Să folosește Org-Mode nu e greu. Dificil este cum îl folosești
+        (potrivit nevoilor tale).
+      \end{itemize}
+    \item \url{https://github.com/hsitz/VimOrganizer}
   \end{itemize}
 \end{frame}
 
 \begin{frame}{Resurse utile}
 	\begin{itemize}
-		\item TODO
+        \item \url{http://orgmode.org/}
+		\item \url{http://www.youtube.com/watch?v=oJTwQvgfgMM}
+        \item \url{http://orgmode.org/orgcard.pdf}
     \end{itemize}
 \end{frame}
 
