org-mode: update "quote" from Dusan

--- a/org-mode/org-mode.tex
+++ b/org-mode/org-mode.tex
@@ -71,8 +71,9 @@
   \begin{itemize}
     \item Thanks to Dusan Gabrijelcic!
       \begin{itemize}
-        \item Să folosește Org-Mode nu e greu. Dificil este cum îl folosești
-        (potrivit nevoilor tale).
+        \item Să folosești Org-Mode nu e greu.
+        \item Dificil este să îl folosești cât mai bine (potrivit nevoilor
+        tale).
       \end{itemize}
     \item \url{https://github.com/hsitz/VimOrganizer}
   \end{itemize}
