org-mode: add link to worg

--- a/org-mode/org-mode.tex
+++ b/org-mode/org-mode.tex
@@ -82,6 +82,7 @@
 \begin{frame}{Resurse utile}
 	\begin{itemize}
         \item \url{http://orgmode.org/}
+        \item \url{http://orgmode.org/worg/}
 		\item \url{http://www.youtube.com/watch?v=oJTwQvgfgMM}
         \item \url{http://orgmode.org/orgcard.pdf}
     \end{itemize}
